Added bio info (Ridge) and linked github to contacts

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 							<p>And this is our project, <strong>Project Title</strong>, <em>a short explanation of the project objectives</em>. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 							<p>Data Science Team</p>
 							<ul style="list-style-type:none; margin-top:-30px;">
-							  <li>Student's name, section</li>
-							  <li>Student's name, section</li>
-							  <li>Student's name, section</li>
+							  <li>Edriel Serrano - section WFU</li>
+							  <li>John Ivan Loristo - section WFX</li>
+							  <li>Ridge Cunanan - section WFU, Director for Publicity of UP CSI, Interested in computer security</li>
 							</ul>
 						</div>
 					</div>
@@ -235,15 +235,17 @@
 						</div>
 						<div class="col-12">
 							<hr />
-							<h3>Find me on ...</h3>
+							<h3>Contact Us!</h3>
 							<ul class="social">
+								<!--
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
 								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								-->
+								<li><a href="https://github.com/racunanan/cs132-g25" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
