--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<p>And this is our project, <strong>Project Title</strong>, <em>a short explanation of the project objectives</em>. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 							<p>Data Science Team</p>
 							<ul style="list-style-type:none; margin-top:-30px;">
-							  <li>Edriel Serrano - section WFU</li>
+							  <li>Edriel Serrano - section WFU, Web Dev, Interested in machine learning</li>
 							  <li>John Ivan Loristo - section WFX</li>
 							  <li>Ridge Cunanan - section WFU, Director for Publicity of UP CSI, Interested in computer security</li>
 							</ul>
