Added Bio section

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 					</div>
 					<footer>
 						<p>Want to learn more? Take a look at our source codes.</p>
-						<a href="#contact" class="button large scrolly">Github Repo</a>
+						<a href="https://github.com/racunanan/cs132-g25" class="button large scrolly">Github Repo</a>
 					</footer>
 				</div>
 			</article>
@@ -205,8 +205,18 @@
 			<article id="team" class="wrapper style4">
 				<div class="container medium">
 					<header>
+						<h2>The Team</h2>
+
+						<h3>Edriel Serrano</h3>
+						<p></p>
+
+						<h3>John Ivan Loristo</h3>
+						<p></p>
+						
+						<h3>Ridge Cunanan</h3>
+						<p>Hello</p>
+
 						<h2>We'd like to hear from you.</h2>
-						<p>You can add more information about the team members here.</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
@@ -244,8 +254,8 @@
 								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
 								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
+								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								-->
-								<li><a href="https://github.com/racunanan/cs132-g25" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
