Modified bio portion

--- a/index.html
+++ b/index.html
@@ -208,13 +208,22 @@
 						<h2>The Team</h2>
 
 						<h3>Edriel Serrano</h3>
-						<p></p>
+						<p>
+							Hello world
+						</p><br />
 
 						<h3>John Ivan Loristo</h3>
-						<p></p>
+						<p>
+							Hello world
+						</p><br />
 						
 						<h3>Ridge Cunanan</h3>
-						<p>Hello</p>
+						<img class="members" alt="" src="./images/ridge.png" />
+						<p>
+							Hi I'm Ridge! I have a lot of interest when it comes to topics of computer security, but
+							I'm generally curious about all things computer-related. I'm very eager to learn
+							new things to enhance my skills, be it web development, backend, or even assembly!
+						</p><br />
 
 						<h2>We'd like to hear from you.</h2>
 					</header>
@@ -246,6 +255,8 @@
 						<div class="col-12">
 							<hr />
 							<h3>Contact Us!</h3>
+							<p>Ridge Cunanan: <span class="emails">racunanan@up.edu.ph</span></p>
+
 							<ul class="social">
 								<!--
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
