Added problem formulation section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<ul class="container">
 					<li><a href="#top">Top</a></li>
 					<li><a href="#overview">Overview</a></li>
-					<li><a href="#data">Data</a></li>
+					<li><a href="#data">Problem Formulation</a></li>
 					<li><a href="#methods">Methods</a></li>
 					<li><a href="#results">Results</a></li>
 					<li><a href="#team">Team</a></li>
@@ -41,7 +41,7 @@
 							<ul style="list-style-type:none; margin-top:-30px;">
 							  <li>Edriel Serrano - section WFU, Web Dev, Interested in machine learning</li>
 							  <li>John Ivan Loristo - section WFX</li>
-							  <li>Ridge Cunanan - section WFU, Director for Publicity of UP CSI, Interested in computer security</li>
+							  <li>Ridge Cunanan - section WFU</li>
 							</ul>
 						</div>
 					</div>
@@ -89,56 +89,44 @@
 			<article id="data" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>We mined the internet for fake news data.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<h2>Problem Formulation</h2>
 					</header>
 					<div class="row">
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-6 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Topic</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><span class="subjects">Research Question</span></h3>
+								<p>
+									Are the Twitter accounts that spread mis/disinformation on Sara Duterte's statements 
+									regarding K-12 pro-sara, anti-sara, or neutral/undeterminable?
+								</p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-6 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Keywords</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><span class="subjects">Hypothesis</span></h3>
+								<p>
+									Most accounts that spread mis/disinformation regarding Sara Duterte are anti-sara.
+								</p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-6 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Tools</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><span class="subjects">Null Hypothesis</span></h3>
+								<p>
+									Accounts that spread mis/disinformation regarding Sara Duterte are not necessarily anti-sara.
+								</p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-6 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Feugiat aliquam</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><span class="subjects">Action Plan</span></h3>
+								<p>
+									Collect mis/disinformation tweets regarding Sara Duterte's K-12 statements 
+									and check the accounts to identify their stance on Sara Duterte.
+								</p>
 							</article>
 						</div>
 					</div>
-					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-					</footer>
 				</div>
 			</article>
 
@@ -165,9 +153,6 @@
 							</article>
 						</div>
 					</div>
-					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-					</footer>
 				</div>
 			</article>
 
@@ -205,7 +190,7 @@
 			<article id="team" class="wrapper style4">
 				<div class="container medium">
 					<header>
-						<h2>The Team</h2>
+						<h1 id="teamTitle">The Team</h1>
 
 						<h3>Edriel Serrano</h3>
 						<p>
@@ -225,6 +210,7 @@
 							new things to enhance my skills, be it web development, backend, or even assembly!
 						</p><br />
 
+					<!--
 						<h2>We'd like to hear from you.</h2>
 					</header>
 					<div class="row">
@@ -252,6 +238,7 @@
 								</div>
 							</form>
 						</div>
+						-->
 						<div class="col-12">
 							<hr />
 							<h3>Contact Us!</h3>
