--- a/index.html
+++ b/index.html
@@ -34,12 +34,20 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Hi. We are <strong>Group Name</strong>.</h1>
+								<h1>Hi! We are the <strong style="color: brown;">Libromancers</strong>.</h1>
 							</header>
-							<p>And this is our project, <strong>Project Title</strong>, <em>a short explanation of the project objectives</em>. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+							<p>
+								We are a team of students from the University of the Philippines Diliman
+								and we are currently doing a project in the field of Data Science. 
+								Our project is titled: <strong>Twitter Mis/Disinformation in PH: Sara Duterte and K-12</strong>.
+								In this project, we analyze tweets that spread mis/disinformation about Sara Duterte's statements
+								regarding the K-12 program. In particular, we check the stance of each poster on Sara Duterte 
+								(pro/anti-Sara or neutral/undeterminable) in order to determine if this influences the spread
+								of mis/disinformation regarding Sara Duterte.
+							</p>
 							<p>Data Science Team</p>
 							<ul style="list-style-type:none; margin-top:-30px;">
-							  <li>Edriel Serrano - section WFU, Web Dev, Interested in machine learning</li>
+							  <li>Edriel Serrano - section WFU</li>
 							  <li>John Ivan Loristo - section WFX</li>
 							  <li>Ridge Cunanan - section WFU</li>
 							</ul>
@@ -53,33 +61,52 @@
 				<div class="container">
 					<header>
 						<h2>Here's an overview of our project.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
 								<h3>Motivation</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<p>
+									The overwhelming popularity of social media allows for a degree
+									of connectedness between people all over the world that is far greater 
+									than before. The current information age makes information readily
+									accessible in only a few clicks/taps. This has the unfortunate
+									consequence of the fast spread of false and misleading information.
+									Such information can even be damaging to an individual's reputation. 
+									It is important to be able to identify these mis/disinformation in order
+									to distinguish true facts and in order to safeguard our own dignity.
+								</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
 								<h3>Problem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<p>
+									The information age caused the issue of defamation to grow. This
+									can be seen in the cancel culture and the "trial by media". The issue
+									of defamation is even more problematic when the information regarding the
+									victim is false, even more so when the spread of such information is done intentionally. 
+									As such, the group aims to investigate the tweets that spread mis/disinformation 
+									about Sara Duterte regarding her statements on the K-12 program in order to identify
+									whether or not false information are more likely to be spread by malicious parties.
+								</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
 								<h3>Solution</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<p>
+									We hope our findings can shed light on the negative effects of mis/disinformation
+									on a person's reputation. This is in order to raise awareness on the need to be careful of
+									how we handle any information that we find online regarding another person. 
+								</p>
 							</section>
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
 						<a href="#portfolio" class="button large scrolly">Let's take a look at our data</a>
 					</footer>
 				</div>
@@ -242,6 +269,8 @@
 						<div class="col-12">
 							<hr />
 							<h3>Contact Us!</h3>
+							<p>Edriel Serrano: <span class="emails">efserrano@up.edu.ph</span></p>
+							<p>John Ivan Loristo: <span class="emails">jfloristo@up.edu.ph</span></p>
 							<p>Ridge Cunanan: <span class="emails">racunanan@up.edu.ph</span></p>
 
 							<ul class="social">
@@ -271,7 +300,7 @@
 					</div>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Libromancers. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 				</div>
