--- a/index.html
+++ b/index.html
@@ -226,7 +226,9 @@
 
 						<h3>John Ivan Loristo</h3>
 						<p>
-							Hello world
+							Hi, I am Ivan. I find computer science a very interesting field, but my favorite topics are data science 
+							and algorithms. I am curious to see where this course takes me because I feel like this would be very helpful
+							in my career.
 						</p><br />
 						
 						<h3>Ridge Cunanan</h3>
@@ -270,7 +272,7 @@
 							<hr />
 							<h3>Contact Us!</h3>
 							<p>Edriel Serrano: <span class="emails">efserrano@up.edu.ph</span></p>
-							<p>John Ivan Loristo: <span class="emails">jfloristo@up.edu.ph</span></p>
+							<p>John Ivan Loristo: <span class="emails">jfloristo1@up.edu.ph</span></p>
 							<p>Ridge Cunanan: <span class="emails">racunanan@up.edu.ph</span></p>
 
 							<ul class="social">
