updated pic for about me (2)

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 						</p><br />
 
 						<h3>John Ivan Loristo</h3>
-						<img class="members" alt="" src="./images/ridge.png" />
+						<img class="members" alt="" src="./images/ivan.png" />
 						<p>
 							Hi, I am Ivan! I find computer science overall a very interesting field, but my favorite topics are data science 
 							and algorithms. I am curious to see where this course takes me because I feel like this would be very helpful
