--- a/index.html
+++ b/index.html
@@ -221,7 +221,9 @@
 
 						<h3>Edriel Serrano</h3>
 						<p>
-							Hello world
+							Hi I'm Ed! I love app and web development. A lot of the different topics in computer science interest me, 
+							but these two fields are where I feel the most comfortable. But with new experiences come new preferences
+							as well. I'm excited to learn and try many more topics in computer science.
 						</p><br />
 
 						<h3>John Ivan Loristo</h3>
