Added page for data collection description

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 						</div>
 					</div>
 					<footer>
-						<a href="#portfolio" class="button large scrolly">Let's take a look at our data</a>
+						<a href="./data-page.html" class="button large scrolly">Let's take a look at our data</a>
 					</footer>
 				</div>
 			</article>
