Expanded the Data Collection page

--- a/data-page.html
+++ b/data-page.html
@@ -11,6 +11,7 @@
             <ul class="container">
                 <li><a href="#top">Data Collection</a></li>
                 <li><a href="#criteria">Labeling Criteria</a></li>
+                <li><a href="#features">Data Features</a></li>
                 <li><a href="#sample">Sample Data</a></li>
                 <li><a href="./index.html">Back to Home</a></li>
             </ul>
@@ -52,7 +53,8 @@
                     Note that the list of keywords above is <strong>not 
                     exhaustive</strong>. This means that any combination of the above
                     words were used as well as different capitalizations to help
-                    find relevant tweets.
+                    find relevant tweets. Tweets were collected during the months
+                    of March and April.
                 </p>
             </div>
         </article>
@@ -87,8 +89,54 @@
                     conflicting opinions are considered <strong>Ambiguous</strong>.
                     We also considered <strong>Marcos supporters</strong> that <strong>made no mention
                     of Sara Duterte</strong> as Ambiguous even if the accounts that we
-                    determined to be Pro-Sara were also Marcos supporters.
+                    determined to be Pro-Sara were also Marcos supporters. A total
+                    of <strong>150 tweets</strong> were collected.
                 </p>
+            </div>
+        </article>
+
+        <article id="features" class="wrapper style2" style="text-align:left;">
+            <div class="container">
+                <header>
+                    <h1>
+                        <strong style="color: brown;">
+                            Data Features
+                        </strong>
+                    </h1>
+                </header>
+                <ul class="feature">
+                    <li><strong>ID</strong> - Identifier of the tweet consisting of group number and tweet number in the data set</li>
+                    <li><strong>Timestamp</strong> - Time when tweet was added to the dataset</li>
+                    <li><strong>Tweet URL</strong> - Link to the tweet</li>
+                    <li><strong>Group</strong> - Group number of the collector of this tweet</li>
+                    <li><strong>Collector</strong> - Name of the collector of this tweet</li>
+                    <li><strong>Categpry</strong> - Category where the tweet topic belongs to</li>
+                    <li><strong>Topic</strong> - Specific topic of the tweet</li>
+                    <li><strong>Keywords</strong> - Keywords used to search for the tweet</li>
+                    <li><strong>Account handle</strong> - Account identifier beginning with '@'</li>
+                    <li><strong>Account name</strong> - Visible name of the account</li>
+                    <li><strong>Account bio</strong> - Description of a user about themself</li>
+                    <li><strong>Account type</strong> - Label for an account. Can be Identified, Anonymous, or a Media account</li>
+                    <li><strong>Joined</strong> - Date when the account was created</li>
+                    <li><strong>Following</strong> - Number of accounts that the user is following</li>
+                    <li><strong>Followers</strong> - Number of followers an account has</li>
+                    <li><strong>Location</strong> - Location of the user. May be a fake place</li>
+                    <li><strong>Tweet</strong> - The actual tweet made by the user</li>
+                    <li><strong>Tweet Translated (optional)</strong> - Tweet translated into English</li>
+                    <li><strong>Tweet type</strong> - Content/s of a tweet</li>
+                    <li><strong>Date posted</strong> - Date when the tweet was posted</li>
+                    <li><strong>Screenshot (optional)</strong> - Picture of the tweet</li>
+                    <li><strong>Content type</strong> - The kind of content that the tweet has. Can be Rational, Emotional, or a Transactional tweet</li>
+                    <li><strong>Likes</strong> - The number of likes the tweet has</li>
+                    <li><strong>Replies</strong> - The number of replies the tweet has</li>
+                    <li><strong>Retweets</strong> - The number of retweets the tweet has</li>
+                    <li><strong>Quote Tweets (optional)</strong> - The number of quote tweets the tweet has</li>
+                    <li><strong>Views (optional)</strong> - The number of views the tweet has</li>
+                    <li><strong>Rating (optional)</strong> - The dis/misinformation classification of the tweet</li>
+                    <li><strong>Reasoning</strong> - The reason why the tweet is considered a dis/misinformation</li>
+                    <li><strong>Remarks (optional)</strong> - Comments on the tweet regarding the other data features</li>
+                    <li><strong>Stance on Sara</strong> - The stance an account has on Sara Duterte. Can be Pro-Sara, Anti-Sara, or Ambiguous</li>
+                </ul>
             </div>
         </article>
 
