Added Data Exploration part

--- a/index.html
+++ b/index.html
@@ -162,14 +162,12 @@
 				<div class="container">
 					<header>
 						<h2>Let's talk about our data science methodology.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
 					</header>
 					<div class="row">
 						<div class="col-6 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Data Preprocessing</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="./explore.html" class="image featured"><img class="exploreImage" src="images/explore.png" alt="" /></a>
+								<h3><a href="./explore.html">Data Preprocessing</a></h3>
 							</article>
 						</div>
 						<div class="col-6 col-6-medium col-12-small">
