Added pic for about me

--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
 						<h1 id="teamTitle">The Team</h1>
 
 						<h3>Edriel Serrano</h3>
+						<img class="members" alt="" src="./images/ed.JPG" />
 						<p>
 							Hi I'm Ed! I love app and web development. A lot of the different topics in computer science interest me, 
 							but these two fields are where I feel the most comfortable. But with new experiences come new preferences
