Fixed results and ML

--- a/index.html
+++ b/index.html
@@ -172,9 +172,8 @@
 						</div>
 						<div class="col-6 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Machine Learning</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image featured"><img src="./images/ai.jpg" alt="" /></a>
+								<h3><a href="./machine-learning.html">Machine Learning</a></h3>
 							</article>
 						</div>
 					</div>
@@ -186,27 +185,49 @@
 				<div class="container">
 					<header>
 						<h2>Here's what we found out.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
 					</header>
 					<div class="row">
 						<div class="col-6 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Results</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3 class="subjects">Results</h3>
+								<p>
+									From our data exploration, we can say that 
+									there are definitely more anti-Sara accounts 
+									spreading misinformation that pro-Sara accounts.
+									However, the presence of many accounts with 
+									ambiguous political stances makes it is difficult 
+									to make a generalization that misinformation is being spread 
+									by anti-Sara accounts. We also noticed that a 
+									majority of the Twitter accounts that we have looked
+									into did not have many political posts prior
+									to the 2022 election period.
+								</p>
 							</article>
 						</div>
 						<div class="col-6 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Results</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3 class="subjects">Future Research</h3>
+								<p>
+									It may not be possible to identify the political 
+									alignment of social media accounts due to users 
+									not generally using social media for political 
+									purposes most of the time. As such, it may be
+									worthwhile to look into other contexts and look
+									for possible relationships between certain features,
+									such as in analyzing the timeframe when the tweets
+									were posted.
+									Our analysis on the topics being discussed in 
+									the misinformation posts and the relationship 
+									between an account's stance on Sara and the account 
+									type shows that more information can be gleaned than
+									what was initially believed. 
+								</p>
 							</article>
 						</div>
 					</div>
 					<footer>
 						<p>Want to learn more? Take a look at our source codes.</p>
-						<a href="https://github.com/racunanan/cs132-g25" class="button large scrolly">Github Repo</a>
+						<a href="https://github.com/racunanan/cs132-exploration.git" class="button large scrolly">Github Repo</a>
 					</footer>
 				</div>
 			</article>
@@ -216,6 +237,7 @@
 				<div class="container medium">
 					<header>
 						<h1 id="teamTitle">The Team</h1>
+
 						<h3>Edriel Serrano</h3>
 						<p>
 							Hi I'm Ed! I love app and web development. A lot of the different topics in computer science interest me, 
