fixed button for ml

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 						</div>
 						<div class="col-6 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="./images/ai.jpg" alt="" /></a>
+								<a href="./machine-learning.html" class="image featured"><img src="./images/ai.jpg" alt="" /></a>
 								<h3><a href="./machine-learning.html">Machine Learning</a></h3>
 							</article>
 						</div>
