--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 				<div class="container medium">
 					<header>
 						<h1 id="teamTitle">The Team</h1>
-						<img class="members" alt="" src="./images/ed.JPG" />
+						<img class="members" alt="" src="./images/ed.jpg" />
 						<h3>Edriel Serrano</h3>
 						<p>
 							Hi I'm Ed! I love app and web development. A lot of the different topics in computer science interest me, 
