--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<p>
 								We are a team of students from the University of the Philippines Diliman
 								and we are currently doing a project in the field of Data Science. 
-								Our project is titled: <strong>Twitter Mis/Disinformation in PH: Sara Duterte and K-12</strong>.
+								Our project is titled: <strong>Context Analysis on Misinformation Tweets Regarding Sara Duterte's Plans for K-12 </strong>.
 								In this project, we analyze tweets that spread mis/disinformation about Sara Duterte's statements
 								regarding the K-12 program. In particular, we check the stance of each poster on Sara Duterte 
 								(pro/anti-Sara or neutral/undeterminable) in order to determine if this influences the spread
